# windowlayouts

./: LICENSE  README.md  pyproject.toml  readme.md
example/: config.ini  config_example.ini
templates/: README.md  generate.py
truhanen/windowlayouts/: __init__.py  windowlayouts.py
