[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "truhanen.windowlayouts"
version = "0.2.5"
packages = [
  {include = "truhanen"},
]
description = "Utility for storing & restoring window layouts on the X Window System"
authors = ["Tuukka Ruhanen <tuukka.t.ruhanen@gmail.com>"]
homepage = "https://github.com/truhanen/windowlayouts"
repository = "https://github.com/truhanen/windowlayouts"
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Topic :: Utilities",
]

[tool.poetry.scripts]
windowlayouts = "truhanen.windowlayouts:main"

[tool.poetry.dependencies]
python = "^3.7.1"
appdirs = "^1.4.4"
dataclasses-json = "^0.5.2"
pandas = {version = "^1.2.3", optional = true}

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.dev-dependencies]
Jinja2 = "^2.11.3"
black = "^20.8b1"
isort = "^5.7.0"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
